# quickstart-filament-app

./: .clang-format  .gitignore  CMakeLists.txt  Project.cmake  Readme.md
cmake/: Build.cmake  ExternalCMakeProj.in.cmake  ExternalDeps.cmake  Unittest.cmake
src/app/: config.cmake  main.cpp
tests/test_sample/: main.cpp  simpletest.cpp
